--- a/tela-login.css
+++ b/tela-login.css
@@ -9,8 +9,9 @@ h1.login{
 
 h1.titulo{
     text-align: center;
-    margin-top: 20px;
+    margin-top: 5%;
     font: bold 50pt arial;
+    color: white;
 
 }
 
@@ -28,13 +29,13 @@ div.tela-login{
 
 }
 input{
-    
+    border-radius: 10px;
     padding: 15px;
     border: none;
     outline: none;
 }
 button{
-    background-color: rgb(54, 250, 191);
+    background-color: rgb(54, 178, 250);
     border: none;
     padding: 15px;
     border-radius: 10px;
@@ -43,6 +44,10 @@ button{
 
 }
 button:hover{
-    background-color: rgb(0, 121, 129);
+    background-color: rgb(26, 65, 83);
     color: white;
+}
+footer{
+    text-align: center;
+    
 }
