--- a/formulario/formestilo.css
+++ b/formulario/formestilo.css
@@ -5,7 +5,7 @@
 
 body{
     font: normal 12pt arial;
-    background-image: linear-gradient(to left,rgb(0, 140, 255),rgb(0, 87, 128));
+    background-color:#d9c1ff;
 }
 div{
     padding: 5px;
@@ -17,24 +17,26 @@ div{
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    background-color: rgb(1, 68, 99);
+    background-color: #5f3875;
     border-radius: 10px;
     color: white;
     padding: 15px;
-    width: 20%;
+    width: 20%;    
+    box-shadow: 1px 1px 15px #00000060;
 }
 
 
 
 fieldset{
-    border: 3px solid dodgerblue;
+    border: 3px solid #c3cbe5;
+    height: 590px;
 
 }
 legend{
-    border: 1px solid dodgerblue;
+    border: 1px solid #fcfcfc;
     padding: 10px;
     text-align: center;
-    background-color: dodgerblue;
+    background-color: #a38dae;
     border-radius: 5px;
 }
 
@@ -71,12 +73,14 @@ label{
 .inputUser:valid ~ .labelinput{
     top: -20px;
     font-size: 12px;
-    color: aqua;
+    color: #d7c3e5;
 
 }
 
+
+
 p{
-    margin: 5px 0px;
+    margin: 10px 4px;
 }
 #data_nascimento{
     border: none;
@@ -84,11 +88,15 @@ p{
     border-radius: 10px;
     outline: none;
     font-size: 15px;
+    background-color: #cbb9d4;
 
+}
+#data_nascimento:hover{
+    background-color: #dbc3e5;
 }
 
 #enviar{
-    background-color: aqua;
+    background-color: #8f01b3;
     width: 99%;
     border: none;
     margin: 2px 2px;
@@ -96,6 +104,13 @@ p{
     font-size: 15px;
     cursor: pointer;
     border-radius: 10px;
+    color: white;
+    box-shadow: 2px 5px 5px rgba(0, 0, 0, 0.288);
 
 
+
+}
+#enviar:hover{
+    color: black;
+    background-color: #c5a2ce;
 }
