--- a/formulario/login/sistemaStyle.css
+++ b/formulario/login/sistemaStyle.css
@@ -5,11 +5,32 @@
 body{font-family: Arial, Helvetica, sans-serif; background-image: linear-gradient(to right, rgb(68, 139, 180), rgb(98, 199, 194),rgb(36, 109, 128));}
 
 header{ text-align: center; padding: 50px; }
-   
+
+nav{
+    width: 97%;
+    background-color: rgb(63, 105, 124);
+    text-align: center;
+    border-radius: 10px;
+    margin: 10px 0px;
+    padding: 10px;
+    
+    
+}
+nav > a{
+    padding: 0px 20px;
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+}
+
+nav > a:hover{
+    color: black;
+    font-weight: bold;
+    
+}
 body{  width: 600px; margin: 0px auto; text-align: justify; }
     
 main{
-    
+    width: 100%;
     background-color: bisque;
     border-radius: 10px;
     box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.322);
@@ -35,8 +56,8 @@ section > p {
     
     width: 150px;
     height: 150px;  
-    border: solid 3px black;
-    background-image: linear-gradient(to right, rgb(68, 139, 180), rgb(98, 199, 194),rgb(36, 109, 128));
+    border: solid .5px black;
+    background-image: linear-gradient(to right, rgb(180, 163, 68), rgb(143, 199, 98),rgb(36, 128, 71));
     
     
     
