--- a/formulario/login/sistemaStyle.css
+++ b/formulario/login/sistemaStyle.css
@@ -1,10 +1,18 @@
 @charset "UTF-8";
 
-*{  margin: 0px; padding: 0px;}   
+*{ 
+    margin: 0px;
+    padding: 0px;
+}   
 
-body{font-family: Arial, Helvetica, sans-serif; background-image: linear-gradient(to right, rgb(68, 139, 180), rgb(98, 199, 194),rgb(36, 109, 128));}
+body{
+    font-family: Arial, Helvetica, sans-serif;
+    background-image: linear-gradient(to right, rgb(68, 139, 180), rgb(98, 199, 194),rgb(36, 109, 128));
+}
 
-header{ text-align: center; padding: 50px; }
+header{ 
+    text-align: center;
+    padding: 50px; }
 
 nav{
     width: 97%;
@@ -14,8 +22,8 @@ nav{
     margin: 10px 0px;
     padding: 10px;
     
-    
 }
+
 nav > a{
     padding: 0px 20px;
     text-decoration: none;
