--- a/formulario/sistemaStyle.css
+++ b/formulario/sistemaStyle.css
@@ -3,7 +3,18 @@
 *{ 
     margin: 0px;
     padding: 0px;
-}   
+}  
+
+.btn{
+    position: fixed;
+    top: 0;
+    right: 0;
+    padding: 10px 20px;
+    text-decoration: none;
+    background-color: rgb(35, 81, 110);
+    border-radius: 5px;
+    color: white;
+}
 
 body{
     font-family: Arial, Helvetica, sans-serif;
@@ -14,7 +25,7 @@ header{
     text-align: center;
     padding: 50px; }
 
-nav{
+.nave{
     width: 97%;
     background-color: rgb(63, 105, 124);
     text-align: center;
