--- a/formulario/sistemaStyle.css
+++ b/formulario/sistemaStyle.css
@@ -28,9 +28,22 @@ header{
 header > h1 {
     text-align: center;
 }
+#burguer{
+    background-color: #615145;
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 10px;
+    cursor: pointer;
+
+}
+#burguer:hover {
+    background-color: white;
+    color: #615145;
+}
 
 menu{
-    display: block;
+    display: none;
 }
 
 menu ul{
